source/openqasm/src/openqasm/parser/antlr/qasm3Parser.py
# Generated from qasm3.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class qasm3Parser ( Parser ):

    grammarFileName = "qasm3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "'include'", "'input'", 
                     "'output'", "'qreg'", "'qubit'", "'bit'", "'creg'", 
                     "'int'", "'uint'", "'float'", "'angle'", "'bool'", 
                     "'complex'", "'const'", "'let'", "'||'", "'gate'", 
                     "'U'", "'CX'", "'gphase'", "'reset'", "'measure'", 
                     "'barrier'", "'inv'", "'@'", "'pow'", "'ctrl'", "'negctrl'", 
                     "'~'", "'!'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'|'", "'^'", "'&'", "'<<'", "'>>'", 
                     "'**'", "'true'", "'false'", "'sin'", "'cos'", "'tan'", 
                     "'exp'", "'ln'", "'sqrt'", "'rotl'", "'rotr'", "'popcount'", 
                     "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'~='", 
                     "'^='", "'<<='", "'>>='", "'%='", "'**='", "'if'", 
                     "'else'", "'for'", "'in'", "'while'", "'end'", "'return'", 
                     "'break'", "'continue'", "'extern'", "'def'", "'#pragma'", 
                     "'duration'", "'stretch'", "'box'", "'durationof'", 
                     "'delay'", "'rotary'", "'defcalgrammar'", "'defcal'", 
                     "'\"openpulse\"'", "'['", "']'", "'{'", "'}'", "'('", 
                     "')'", "':'", "';'", "'.'", "','", "'='", "'->'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'im'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", 
                      "EQUALS", "ARROW", "PLUS", "MINUS", "MUL", "DIV", 
                      "MOD", "IMAG", "ImagNumber", "Constant", "Whitespace", 
                      "Newline", "Integer", "Identifier", "RealNumber", 
                      "TimingLiteral", "StringLiteral", "LineComment", "BlockComment" ]

    RULE_program = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_ioIdentifier = 4
    RULE_io = 5
    RULE_globalStatement = 6
    RULE_statement = 7
    RULE_quantumDeclarationStatement = 8
    RULE_classicalDeclarationStatement = 9
    RULE_classicalAssignment = 10
    RULE_assignmentStatement = 11
    RULE_returnSignature = 12
    RULE_designator = 13
    RULE_identifierList = 14
    RULE_quantumDeclaration = 15
    RULE_quantumArgument = 16
    RULE_quantumArgumentList = 17
    RULE_bitType = 18
    RULE_singleDesignatorType = 19
    RULE_noDesignatorType = 20
    RULE_classicalType = 21
    RULE_numericType = 22
    RULE_constantDeclaration = 23
    RULE_singleDesignatorDeclaration = 24
    RULE_noDesignatorDeclaration = 25
    RULE_bitDeclaration = 26
    RULE_complexDeclaration = 27
    RULE_classicalDeclaration = 28
    RULE_classicalTypeList = 29
    RULE_classicalArgument = 30
    RULE_classicalArgumentList = 31
    RULE_anyTypeArgument = 32
    RULE_anyTypeArgumentList = 33
    RULE_aliasStatement = 34
    RULE_indexIdentifier = 35
    RULE_indexIdentifierList = 36
    RULE_rangeDefinition = 37
    RULE_quantumGateDefinition = 38
    RULE_quantumGateSignature = 39
    RULE_quantumGateName = 40
    RULE_quantumBlock = 41
    RULE_quantumLoop = 42
    RULE_quantumLoopBlock = 43
    RULE_quantumStatement = 44
    RULE_quantumInstruction = 45
    RULE_quantumPhase = 46
    RULE_quantumReset = 47
    RULE_quantumMeasurement = 48
    RULE_quantumMeasurementAssignment = 49
    RULE_quantumBarrier = 50
    RULE_quantumGateModifier = 51
    RULE_powModifier = 52
    RULE_ctrlModifier = 53
    RULE_quantumGateCall = 54
    RULE_unaryOperator = 55
    RULE_comparisonOperator = 56
    RULE_equalityOperator = 57
    RULE_logicalOperator = 58
    RULE_expressionStatement = 59
    RULE_expression = 60
    RULE_logicalAndExpression = 61
    RULE_bitOrExpression = 62
    RULE_xOrExpression = 63
    RULE_bitAndExpression = 64
    RULE_equalityExpression = 65
    RULE_comparisonExpression = 66
    RULE_bitShiftExpression = 67
    RULE_additiveExpression = 68
    RULE_multiplicativeExpression = 69
    RULE_unaryExpression = 70
    RULE_powerExpression = 71
    RULE_expressionTerminator = 72
    RULE_booleanLiteral = 73
    RULE_builtInCall = 74
    RULE_builtInMath = 75
    RULE_castOperator = 76
    RULE_expressionList = 77
    RULE_equalsExpression = 78
    RULE_assignmentOperator = 79
    RULE_setDeclaration = 80
    RULE_programBlock = 81
    RULE_branchingStatement = 82
    RULE_loopSignature = 83
    RULE_loopStatement = 84
    RULE_endStatement = 85
    RULE_returnStatement = 86
    RULE_controlDirective = 87
    RULE_externDeclaration = 88
    RULE_externOrSubroutineCall = 89
    RULE_subroutineDefinition = 90
    RULE_subroutineBlock = 91
    RULE_pragma = 92
    RULE_timingType = 93
    RULE_timingBox = 94
    RULE_timingIdentifier = 95
    RULE_timingInstructionName = 96
    RULE_timingInstruction = 97
    RULE_timingStatement = 98
    RULE_calibration = 99
    RULE_calibrationGrammarDeclaration = 100
    RULE_calibrationDefinition = 101
    RULE_calibrationGrammar = 102
    RULE_calibrationArgumentList = 103

    ruleNames =  [ "program", "header", "version", "include", "ioIdentifier", 
                   "io", "globalStatement", "statement", "quantumDeclarationStatement", 
                   "classicalDeclarationStatement", "classicalAssignment", 
                   "assignmentStatement", "returnSignature", "designator", 
                   "identifierList", "quantumDeclaration", "quantumArgument", 
                   "quantumArgumentList", "bitType", "singleDesignatorType", 
                   "noDesignatorType", "classicalType", "numericType", "constantDeclaration", 
                   "singleDesignatorDeclaration", "noDesignatorDeclaration", 
                   "bitDeclaration", "complexDeclaration", "classicalDeclaration", 
                   "classicalTypeList", "classicalArgument", "classicalArgumentList", 
                   "anyTypeArgument", "anyTypeArgumentList", "aliasStatement", 
                   "indexIdentifier", "indexIdentifierList", "rangeDefinition", 
                   "quantumGateDefinition", "quantumGateSignature", "quantumGateName", 
                   "quantumBlock", "quantumLoop", "quantumLoopBlock", "quantumStatement", 
                   "quantumInstruction", "quantumPhase", "quantumReset", 
                   "quantumMeasurement", "quantumMeasurementAssignment", 
                   "quantumBarrier", "quantumGateModifier", "powModifier", 
                   "ctrlModifier", "quantumGateCall", "unaryOperator", "comparisonOperator", 
                   "equalityOperator", "logicalOperator", "expressionStatement", 
                   "expression", "logicalAndExpression", "bitOrExpression", 
                   "xOrExpression", "bitAndExpression", "equalityExpression", 
                   "comparisonExpression", "bitShiftExpression", "additiveExpression", 
                   "multiplicativeExpression", "unaryExpression", "powerExpression", 
                   "expressionTerminator", "booleanLiteral", "builtInCall", 
                   "builtInMath", "castOperator", "expressionList", "equalsExpression", 
                   "assignmentOperator", "setDeclaration", "programBlock", 
                   "branchingStatement", "loopSignature", "loopStatement", 
                   "endStatement", "returnStatement", "controlDirective", 
                   "externDeclaration", "externOrSubroutineCall", "subroutineDefinition", 
                   "subroutineBlock", "pragma", "timingType", "timingBox", 
                   "timingIdentifier", "timingInstructionName", "timingInstruction", 
                   "timingStatement", "calibration", "calibrationGrammarDeclaration", 
                   "calibrationDefinition", "calibrationGrammar", "calibrationArgumentList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    LBRACKET=89
    RBRACKET=90
    LBRACE=91
    RBRACE=92
    LPAREN=93
    RPAREN=94
    COLON=95
    SEMICOLON=96
    DOT=97
    COMMA=98
    EQUALS=99
    ARROW=100
    PLUS=101
    MINUS=102
    MUL=103
    DIV=104
    MOD=105
    IMAG=106
    ImagNumber=107
    Constant=108
    Whitespace=109
    Newline=110
    Integer=111
    Identifier=112
    RealNumber=113
    TimingLiteral=114
    StringLiteral=115
    LineComment=116
    BlockComment=117

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(qasm3Parser.HeaderContext,0)


        def globalStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.GlobalStatementContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.GlobalStatementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.StatementContext,i)


        def getRuleIndex(self):
            return qasm3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = qasm3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            self.header()
            self.state = 213
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << qasm3Parser.T__4) | (1 << qasm3Parser.T__5) | (1 << qasm3Parser.T__6) | (1 << qasm3Parser.T__7) | (1 << qasm3Parser.T__8) | (1 << qasm3Parser.T__9) | (1 << qasm3Parser.T__10) | (1 << qasm3Parser.T__11) | (1 << qasm3Parser.T__12) | (1 << qasm3Parser.T__13) | (1 << qasm3Parser.T__14) | (1 << qasm3Parser.T__15) | (1 << qasm3Parser.T__17) | (1 << qasm3Parser.T__18) | (1 << qasm3Parser.T__19) | (1 << qasm3Parser.T__20) | (1 << qasm3Parser.T__21) | (1 << qasm3Parser.T__22) | (1 << qasm3Parser.T__23) | (1 << qasm3Parser.T__24) | (1 << qasm3Parser.T__26) | (1 << qasm3Parser.T__27) | (1 << qasm3Parser.T__28) | (1 << qasm3Parser.T__29) | (1 << qasm3Parser.T__30) | (1 << qasm3Parser.T__44) | (1 << qasm3Parser.T__45) | (1 << qasm3Parser.T__46) | (1 << qasm3Parser.T__47) | (1 << qasm3Parser.T__48) | (1 << qasm3Parser.T__49) | (1 << qasm3Parser.T__50) | (1 << qasm3Parser.T__51) | (1 << qasm3Parser.T__52) | (1 << qasm3Parser.T__53) | (1 << qasm3Parser.T__54))) != 0) or ((((_la - 68)) & ~0x3f) == 0 and ((1 << (_la - 68)) & ((1 << (qasm3Parser.T__67 - 68)) | (1 << (qasm3Parser.T__69 - 68)) | (1 << (qasm3Parser.T__71 - 68)) | (1 << (qasm3Parser.T__72 - 68)) | (1 << (qasm3Parser.T__76 - 68)) | (1 << (qasm3Parser.T__77 - 68)) | (1 << (qasm3Parser.T__78 - 68)) | (1 << (qasm3Parser.T__79 - 68)) | (1 << (qasm3Parser.T__80 - 68)) | (1 << (qasm3Parser.T__81 - 68)) | (1 << (qasm3Parser.T__82 - 68)) | (1 << (qasm3Parser.T__83 - 68)) | (1 << (qasm3Parser.T__84 - 68)) | (1 << (qasm3Parser.T__85 - 68)) | (1 << (qasm3Parser.T__86 - 68)) | (1 << (qasm3Parser.LPAREN - 68)) | (1 << (qasm3Parser.MINUS - 68)) | (1 << (qasm3Parser.ImagNumber - 68)) | (1 << (qasm3Parser.Constant - 68)) | (1 << (qasm3Parser.Integer - 68)) | (1 << (qasm3Parser.Identifier - 68)) | (1 << (qasm3Parser.RealNumber - 68)) | (1 << (qasm3Parser.TimingLiteral - 68)) | (1 << (qasm3Parser.StringLiteral - 68)))) != 0):
                self.state = 211
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [qasm3Parser.T__4, qasm3Parser.T__5, qasm3Parser.T__17, qasm3Parser.T__76, qasm3Parser.T__77, qasm3Parser.T__78, qasm3Parser.T__85, qasm3Parser.T__86]:
                    self.state = 209
                    self.globalStatement()
                    pass
                elif token in [qasm3Parser.T__6, qasm3Parser.T__7, qasm3Parser.T__8, qasm3Parser.T__9, qasm3Parser.T__10, qasm3Parser.T__11, qasm3Parser.T__12, qasm3Parser.T__13, qasm3Parser.T__14, qasm3Parser.T__15, qasm3Parser.T__18, qasm3Parser.T__19, qasm3Parser.T__20, qasm3Parser.T__21, qasm3Parser.T__22, qasm3Parser.T__23, qasm3Parser.T__24, qasm3Parser.T__26, qasm3Parser.T__27, qasm3Parser.T__28, qasm3Parser.T__29, qasm3Parser.T__30, qasm3Parser.T__44, qasm3Parser.T__45, qasm3Parser.T__46, qasm3Parser.T__47, qasm3Parser.T__48, qasm3Parser.T__49, qasm3Parser.T__50, qasm3Parser.T__51, qasm3Parser.T__52, qasm3Parser.T__53, qasm3Parser.T__54, qasm3Parser.T__67, qasm3Parser.T__69, qasm3Parser.T__71, qasm3Parser.T__72, qasm3Parser.T__79, qasm3Parser.T__80, qasm3Parser.T__81, qasm3Parser.T__82, qasm3Parser.T__83, qasm3Parser.T__84, qasm3Parser.LPAREN, qasm3Parser.MINUS, qasm3Parser.ImagNumber, qasm3Parser.Constant, qasm3Parser.Integer, qasm3Parser.Identifier, qasm3Parser.RealNumber, qasm3Parser.TimingLiteral, qasm3Parser.StringLiteral]:
                    self.state = 210
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 215
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(qasm3Parser.VersionContext,0)


        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.IncludeContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.IncludeContext,i)


        def io(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3Parser.IoContext)
            else:
                return self.getTypedRuleContext(qasm3Parser.IoContext,i)


        def getRuleIndex(self):
            return qasm3Parser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = qasm3Parser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 217
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==qasm3Parser.T__0:
                self.state = 216
                self.version()


            self.state = 222
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==qasm3Parser.T__1:
                self.state = 219
                self.include()
                self.state = 224
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 228
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==qasm3Parser.T__2 or _la==qasm3Parser.T__3:
                self.state = 225
                self.io()
                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(qasm3Parser.SEMICOLON, 0)

        def Integer(self):
            return self.getToken(qasm3Parser.Integer, 0)

        def RealNumber(self):
            return self.getToken(qasm3Parser.RealNumber, 0)

        def getRuleIndex(self):
            return qasm3Parser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = qasm3Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 231
            self.match(qasm3Parser.T__0)
            self.state = 232
            _la = self._input.LA(1)
            if not(_la==qasm3Parser.Integer or _la==qasm3Parser.RealNumber):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 233
            self.match(qasm3Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(qasm3Parser.StringLiteral, 0)

        def SEMICOLON(self):
            return self.getToken(qasm3Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return qasm3Parser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):
